add some changes in swagger
