# src/routes/posts.routes.ts
@@ -28,8 +28,52 @@ routes.get("/:id/categories", async (req, res) => {
   return res.json(categoriesOfPost);
 });
 
+routes.get("/user/:id", ensureAuthenticated, async (req, res) => {
+  const userId = Number(req.params.id);
+
+  const userExists = await prisma.user.findUnique({
+    where: {
+      id: userId,
+    },
+  });
+
+  if (!userExists) {
+    return res.status(400).json({
+      error: "user not exists!",
+    });
+  }
+
+  const postsByUser: Post[] = await prisma.user
+    .findUnique({ where: { id: userId } })
+    .posts();
+
+  return res.json(postsByUser);
+});
+
+routes.get("/published", async (req, res) => {
+  const publishedPosts = await prisma.post.findMany({
+    where: {
+      published: true,
+    },
+  });
+
+  return res.json(publishedPosts);
+});
+
 routes.post("/", async (req, res) => {
   const { title, authorId } = req.body;
+
+  const userExists = await prisma.user.findUnique({
+    where: {
+      id: authorId,
+    },
+  });
+
+  if (!userExists) {
+    return res.status(400).json({
+      error: "user not exists!",
+    });
+  }
 
   try {
     const post: Post = await prisma.post.create({
@@ -45,12 +89,95 @@ routes.post("/", async (req, res) => {
   }
 });
 
-routes.get("/user", ensureAuthenticated, async (req, res) => {
-  const postsByUser: Post[] = await prisma.user
-    .findUnique({ where: { email: "lbelo147@gmail.com" } })
-    .posts();
+routes.put("/:id", ensureAuthenticated, async (req, res) => {
+  const postId = Number(req.params.id);
+  const { title } = req.body;
 
-  return res.json(postsByUser);
+  const postExists = await prisma.post.findUnique({
+    where: {
+      id: postId,
+    },
+  });
+
+  if (!postExists) {
+    return res.status(400).json({
+      error: "post not exists!",
+    });
+  }
+
+  try {
+    const postUpdated = await prisma.post.update({
+      data: {
+        title: title,
+      },
+      where: {
+        id: postId,
+      },
+    });
+
+    return res.status(200).json(postUpdated);
+  } catch (error) {
+    return res.json(error);
+  }
+});
+
+routes.put("/publish/:id", ensureAuthenticated, async (req, res) => {
+  const postId = Number(req.params.id);
+
+  const postExists = await prisma.post.findUnique({
+    where: {
+      id: postId,
+    },
+  });
+
+  if (!postExists) {
+    return res.status(400).json({
+      error: "post not exists!",
+    });
+  }
+
+  try {
+    const postUpdated = await prisma.post.update({
+      data: {
+        published: true,
+      },
+      where: {
+        id: postId,
+      },
+    });
+
+    return res.status(200).json(postUpdated);
+  } catch (error) {
+    return res.json(error);
+  }
+});
+
+routes.delete("/:id", ensureAuthenticated, async (req, res) => {
+  const postId = Number(req.params.id);
+
+  const postExists = await prisma.post.findUnique({
+    where: {
+      id: postId,
+    },
+  });
+
+  if (!postExists) {
+    return res.status(400).json({
+      error: "post not exists!",
+    });
+  }
+
+  try {
+    await prisma.post.delete({
+      where: {
+        id: postId,
+      },
+    });
+
+    return res.status(200).send();
+  } catch (error) {
+    return res.json(error);
+  }
 });
 
 export default routes;
